Assignment2/frontend/src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
:root {
    --gradient: linear-gradient(
    45deg,
    #1a515d, 
    #155340, 
    #1A936F, 
    #76C991, 
    #1A936F, 
    #0b3c2d, 
    #114B5f);}

/* All Pages */
body {
    margin: 0; /* Remove default body margin */
    padding: 0; /* Remove default body padding */
    font-family: 'Kanit', sans-serif;
    overflow: hidden;
  }

/* Home Page */
/* background: linear-gradient(to bottom, #1A936F, #76C991);*/
.home-background {
    background-image: var(--gradient);
    background-size: 400%;
    min-height: 100vh;
    animation: gradientAnimation 10s infinite; /* Adjust the duration as needed */
}

.Home {
    color: #F3E9D2;
    text-align: center;
}

.home-button {
    border-radius: 60px;
    border: 2px solid #114B5F;
    color: #F3E9D2;
    box-shadow: 0px 3px 4px rgba(0,0,0,.25);
}

@keyframes gradientAnimation {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
  }

/* Contributions Page */
.contributions-background {
    background: linear-gradient(to bottom, #88D498, #F3E9D2); 
    height: 100vh; 
}

.Contributions {
    color: #114B5F;
    text-align: center;
}

.extrabold-heading {
    font-weight: 1000;
}

/* Login Page */
.login-background {
    background: linear-gradient(to bottom, #C6DABF, #88D498); 
    height: 100vh;
}

.Login {
    color: #000000;
}

.btn-login-pg {
    background-color: #C6DABF;
    color: #114B5F;
    box-shadow: 0px 3px 4px rgba(0,0,0,.25);
    margin-top: 1em;
    width: 100%;
}

/* Setup Page */
.Setup {
    color: #114B5F;
}

.Setup label {
    color:#000000;
}

.row input, .row select { /* Borders for Inputs */
    border: 1px solid #114B5F;
}

.setup-background {
    background: linear-gradient(to bottom, #88D498, #114B5F); 
    height: 100vh;
}

/* Settings */
.settings-background {
    background-color: #1A936F;
    height: 100vh;
}

.Settings {
    color: #FFFFFF;
    text-align: center;
}

/* Dashboard */
.dashboard-background {
    background-color: #1A936F;
    height: 100vh;
}

.dashboard-btns {
    margin: auto;
    margin-top: 5vh;
    width: 50vh;
    height: 50vh;
    background-color: #C6DABF;
    color: #114B5F;
    border-radius: 15px;
    border: 3px solid #114B5F;
    font-size: 32pt;
    padding-top: 12vh;
}

.dashboard-btns:hover {
    background-color: #F3E9D2;
    color: #114B5F;
    border: 3px solid #114B5F;
}

/* History */
.history-background {
    background-color: #C6DABF;
    height: 100vh;
}

.hist-card {
    background-color: lightgray;
    margin: auto;
    width: 200vh;
    height: 75vh;
    border: 1px solid #114B5F;
    border-radius: 10px;
}

.table-area {
    background-color: white;
    margin: auto;
    margin-top: 15vh;
    width: 190vh;
    height: 57vh;
    border: 1px solid gray;
    border-radius: 10px;
}

.table tr {
    border-bottom: 1px solid gray; /* Change the color of the horizontal lines */
    height: 30px;
}

.dark-mode {
    background-color: #333;
    color: #fff;
}

.dark-button {
    background-color: #333;
    border-color: #333;
}


/* View Page */
.view-background {
    background: linear-gradient(to bottom, #C6DABF, #C6DABF); 
    height: 100vh
}

/* Update Account Page */
.update-background {
    background: linear-gradient(to bottom, #114B5F, #88D498); 
    height: 100vh;
}

/* Navbar */
.navbar.navbar-expand-lg {
    background-color: #13785A;
    display: flex;
    max-height: 60px; /* Adjust the value as needed */
    overflow: hidden;
}

/* cards */
.card {
    margin: auto;
    margin-top: 10%;
    width: 70%;
    height: 80%;
    border-radius: 30px;
}

.card-body {
    background-color: #F3E9D2;
    border-radius: 30px;
}

/* grid */
.col-xs {
    background-color: #FFFFFF;
    border-radius: 30px;
}

/* img */
.img-fluid {
    margin: 0 auto; /* This will horizontally center the image */
    display: block; /* This ensures the margin property works correctly */
}



.mb-6 {
    margin-bottom: 1 !important;
}

